--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "chalk": "^4.1.0",
     "concurrently": "^4.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-handlebars": "^5.2.0",
+    "fs": "0.0.1-security",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.3.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "passport-spotify": "^1.1.0",
     "path": "^0.12.7",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
