--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fs": "0.0.1-security",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.3.0",
+    "jwt-decode": "^3.1.2",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-spotify": "^1.1.0",
