--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.3.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-spotify": "^1.1.0",
@@ -31,6 +32,7 @@
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.4.0",
+    "sequelize-auto-migrations": "^1.0.3",
     "validator": "^10.9.0"
   },
   "devDependencies": {
