--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.4.0",
     "sequelize-auto-migrations": "^1.0.3",
+    "util": "^0.12.3",
     "validator": "^10.9.0"
   },
   "devDependencies": {
